# OpenCLSorts

./: BitonicSort.cpp  CMakeLists.txt  OpenCLUtils.h  QuicksortMain.cpp  README.md  cmdparser.cpp
cl/: merge_sort_cl.h
libs/gpu/: CMakeLists.txt
libs/utils/: CMakeLists.txt
